--- a/azure_jumpstart_localbox/.github/workflows/swa-docs.yml
+++ b/azure_jumpstart_localbox/.github/workflows/swa-docs.yml
@@ -5,10 +5,10 @@ on:
     branches: [ main ]
     paths:
       - 'docs/**'
-      - 'mkdocs.yml'
-      - 'requirements.txt'
-      - 'staticwebapp.config.json'
-      - '.github/workflows/swa-docs.yml'
+      - 'azure_jumpstart_localbox/mkdocs.yml'
+      - 'azure_jumpstart_localbox/requirements.txt'
+      - 'azure_jumpstart_localbox/staticwebapp.config.json'
+      - 'azure_jumpstart_localbox/.github/workflows/swa-docs.yml'
   workflow_dispatch:
 
 jobs:
@@ -22,19 +22,22 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+          cache: 'pip'
 
       - name: Install dependencies
+        working-directory: azure_jumpstart_localbox
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Build MkDocs site
+        working-directory: azure_jumpstart_localbox
         run: mkdocs build --strict
 
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          action: "upload"
-          app_location: "site"
+          action: upload
+          app_location: azure_jumpstart_localbox/site
           output_location: ""
